fixed mobile link z-index position

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -80,7 +80,7 @@
     position: fixed;
     top: 0em;
     right: 0em;
-    z-index: -1;
+    z-index: 0;
     height: 100px;
     width: 100px;
 }
